# src/app/services/models/get-paged-users-response.ts
@@ -1,0 +1,6 @@
+/* tslint:disable */
+/* eslint-disable */
+import { UsersPagedResult } from '../models/users-paged-result';
+export interface GetPagedUsersResponse {
+  pagedResult?: UsersPagedResult;
+}
