# src/app/services/models/users-paged-result.ts
@@ -1,0 +1,7 @@
+/* tslint:disable */
+/* eslint-disable */
+import { UserDto } from '../models/user-dto';
+export interface UsersPagedResult {
+  totalRecords?: number;
+  users?: Array<UserDto>;
+}
